--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
+     "expo-web-browser": "~12.3.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-webview": "13.15.0"
